fixed text overflow

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -62,6 +62,12 @@ div::-webkit-scrollbar {
   z-index: 1;
   padding: 15px;
 }
+.drawflow .drawflow-node span {
+  display: block;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
 .drawflow .drawflow-node.selected {
   background: #2c3e50;
   color: white;
